--- a/teste html/assets/img/main.css
+++ b/teste html/assets/img/main.css
@@ -1,6 +1,6 @@
 body {
     font-size: large;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Courier New', Courier, monospace;
     background-color: antiquewhite;
 }
 
@@ -9,29 +9,48 @@ body {
     text-align: center;
 }
 
-.subt h2{
+.subt h2 {
     text-align: right;
+    font-family: 'Courier New', Courier, monospace;
 }
 
 .Img {
     object-fit: calc(2s);
-    transition: transform 1s ease
+    transition: transform 1.5s ease
 }
 
 .Img:hover {
-transform: scale(1.05);
+    transform: scale(1.05);
 }
 
-.textMusica{
-  text-align: end;
-  color: grey;
-  
+.textMusica {
+    text-align: end;
 }
 
-.textMusica p a{
-    color: grey;
+#img {
+    object-fit: calc(2s);
+    transition: transform 1.5s ease
+}
+
+#img:hover {
+    transform: scale(1.05);
+}
+
+.Imagem{
+    text-align: end;
+}
+
+.txtMusica {
+    text-align: end;
+    color: gray;
+}
+
+.txtMusica a {
+    color: gray;
     text-decoration: none;
 }
-.link{
-    text-align: end;
+
+.txtMusica a:hover {
+    color: black;
+    transition: 0.7s;
 }
