--- a/teste html/assets/img/css/main.css
+++ b/teste html/assets/img/css/main.css
@@ -111,7 +111,7 @@ section.slider{
   }
   
   .nav-manual .manual-btn, .nav-auto div{
-    border: 1px solid  rgb(255, 255, 255);
+    border: 1px solid antiquewhite;
     padding: 10px;
     border-radius: 50%;
     cursor: pointer;
@@ -123,11 +123,11 @@ section.slider{
   }
   
   .nav-manual .manual-btn:hover{
-    background-color: #ffffff;
+    background-color:antiquewhite ;
   }
   
   #radio1:checked ~ .nav-auto .auto-btn1, #radio2:checked ~ .nav-auto .auto-btn2, #radio3:checked ~ .nav-auto .auto-btn3{
-    background: rgb(255, 255, 255);
+    background-color:antiquewhite ;
   }
   
   #radio1:checked ~ .primeiro{
@@ -155,3 +155,29 @@ section.slider{
         margin-top: 60%;
     }
   }
+
+/* Estilo padrão para desktop */
+body {
+  font-size: 16px;
+}
+
+/* Estilos para telas pequenas (por exemplo, smartphones) */
+@media (max-width: 600px) {
+  body {
+    font-size: 14px;
+  }
+  .container {
+    padding: 10px;
+  }
+  .item {
+    flex: 1 1 100%; /* Faz os itens ocupar toda a largura disponível */
+  }
+}
+
+/* Estilos para telas médias (por exemplo, tablets) */
+@media (max-width: 900px) {
+  body {
+    font-size: 15px;
+  }
+}
+
